--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
     "redux-promise": "^0.6.0"
   },
   "devDependencies": {
+    "@types/expo": "^32.0.11",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.14",
+    "@types/react-native": "^0.57.47",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
-    "remote-redux-devtools": "^0.5.16"
+    "react-native-typescript-transformer": "^1.2.12",
+    "remote-redux-devtools": "^0.5.16",
+    "typescript": "^3.4.4"
   },
   "private": true
 }
