--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react-navigation": "^3.0.6",
+    "@types/react-redux": "^7.0.8",
     "@types/expo": "^32.0.11",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.14",
-    "@types/react-native": "^0.57.47",
+    "@types/react-native": "^0.57.51",
     "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
