--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react-navigation": "^3.0.6",
-    "@types/react-redux": "^7.0.8",
     "@types/expo": "^32.0.11",
     "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.8",
     "@types/react": "^16.8.14",
     "@types/react-native": "^0.57.51",
+    "@types/react-navigation": "^3.0.6",
+    "@types/react-redux": "^7.0.8",
     "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
