--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
+    "prettier": "^1.17.0",
+    "prettier-tslint": "^0.4.2",
     "react-native-typescript-transformer": "^1.2.12",
     "remote-redux-devtools": "^0.5.16",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.4"
   },
   "private": true
